# EDTVelizyDiscord

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-with-dev.txt  requirements.txt
.github/workflows/: build_docker.yml  test.yml
edtvelizydiscord/: config.py  logger.py  main.py
edtvelizydiscord/core/: discord.py  timer.py  timetable.py
edtvelizydiscord/models/: timetable.py
edtvelizydiscord/tests/: test_config.py  test_timetable.py
edtvelizydiscord/tests/data/: edt_1_valid.xml
scripts/: lint.sh  test.sh
src/: config.py  logger.py  main.py
src/core/: discord.py  timetable.py
src/models/: diff.py  timetable.py
